package com.trainerapp.calorie_calculator.enums;

public enum FoodOriginType {

    GRAIN,
    VEGETABLE,
    FRUIT,
    DAIRY,
    PROTEIN;

}