package com.trainerapp.calorie_calculator.enums;

public enum MicronutrientType {
    VITAMIN,
    MINERAL,
    ELECTROLYTE,
    ANTIOXIDANT,
    ESSENTIAL_FATTY_ACID;

    MicronutrientType() {}
}
