@startuml

class Recipe {
    - id: Long
    - name: String
    - description: String
    - imageUrl: String
    - preparationTime: String
    - difficulty: DifficultyType
}
Recipe "1" *-- "1...*" RecipeSection : sections
Recipe "1" *-- "0...*" Tag : tags

class Tag {
    - id: Long
    - label: String
}

class RecipeSection {
    - id: Long
    - title: String
}
RecipeSection "1" *-- "1...*" Step : steps
RecipeSection "1" *-- "1...*" Ingredient : Ingredients
RecipeSection "1" *-- "0...*" Seasoning : seasonings

class Step {
    - instructions: String
}

class Ingredient {
    - id: Long
    - amount: Double
    - Label: String
}
Ingredient "1" *-- "1" Food : food
Ingredient "1" o-- "1" MeasurementUnit : unit

class Seasoning {
    - id: Long
    - name: String
    - amount: Double
    - unit: UnitType
    - label: String
}

class Food {
    - id: Long
    - name: String
    - foodOrigin: FoodOriginType
    - nutritionalFunctions: List<NutritionalFunctionType>
}
Food "1" *-- "1" NutritionalInfo : nutritionalInfo
Food "1" *-- "1...*" MeasurementUnit : allowedUnits
Food "1" *-- "0...*" MicronutrientContent : micronutrients

class NutritionalInfo {
    - energy: Double
    - carbohydrates: Double
    - sugars: Double
    - proteins: Double
    - totalFats: Double
    - saturatedFats: Double
    - fiber: Double
}

class MicronutrientContent {
    - id: Long
    - amountPerGram: Double
}
MicronutrientContent "1" *-- "1" Micronutrient : micronutrients

class Micronutrient {
    - id: Long
    - name: String
    ' recommendedDietaryAllowance
    - rda: Double
    - unit: UnitType
}

class MeasurementUnit {
    - id: Long
    - unit: UnitType
    - gramsPerUnit: Double
}

enum UnitType {
    GRAMS
    MILLIGRAMS
    KILOGRAMS
    MICROGRAMS
    MILLILITERS
    UNIT
    TABLESPOON
    TEASPOON
    PERCENTAGE
    AS_NEEDED
    TO_TASTE
    SLICE
    PIECE
    PINCH
    HANDFUL
    DASH
    DROP
}

enum FoodOriginType {
    GRAIN
    VEGETABLE
    FRUIT
    DAIRY
    PROTEIN
}

enum NutritionalFunctionType {
    ENERGY_FOOD
    REGULATORY_FOOD
    BUILDER_FOOD
}

enum DifficultyType {
    EASY
    INTERMEDIATE
    HARD
}

enum MicronutrientType {
    VITAMIN
    MINERAL
    ELECTROLYTE
    ANTIOXIDANT
    ESSENTIAL_FATTY_ACID
}

@enduml
